# speech_analitycs

./: .gitignore  CLAUDE.md  Cargo.toml  Containerfile.test-go  Containerfile.test-rust  Containerfile.test-sftp  Containerfile.test-sftp-server  DEPLOY.md  README.md  SECURITY.md  podman-compose.override.yml  podman-compose.yml
.orchestrator/: action_registry.yaml  context_pack.yaml  gates.yaml  policy.yaml  project.yaml  scopes.yaml
audio-converter-rs/: Cargo.toml  Containerfile
audio-converter-rs/src/: main.rs
audio-fetcher-rs/: Cargo.toml  Containerfile
audio-fetcher-rs/src/: main.rs
audio-uploader-go/: Containerfile  go.mod
audio-uploader-go/cmd/audio-uploader-go/: main.go  outgoing_test.go  report_test.go  sftp_config_test.go  sftp_integration_test.go  util_test.go
audio-uploader-go/cmd/test-sftp-server/: main.go
audio-uploader-go/testdata/fixtures/: matched_maf.json  matched_natura.json
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  paths.rs  types.rs  util.rs
deploy/: audios-natura-cleanup.service  audios-natura-cleanup.sh  audios-natura-cleanup.timer  audios-natura-pipeline.service  audios-natura-pipeline.timer  install.sh  release_checklist.md
metadata-matcher-rs/: Cargo.toml  Containerfile
metadata-matcher-rs/src/: main.rs
pipeline-runner/: Cargo.toml  Containerfile
pipeline-runner/src/: main.rs
scripts/: build_release.sh  check_invariants.sh  run_pipeline.sh  run_pipeline_dev.sh  run_production.sh  run_range.sh  run_rangev2.sh  start_test_sftp.sh  stop_test_sftp.sh
secrets/: mssql.env.example  sftp.env.example
shared/config/: agents.yml  rpta_opecodout.yml
shared/config/clients/: enabled.txt  maf.yml  natura.yml
shared/config/maf/: batch_lookup.yml
shared/config/natura/: batch_lookup.yml
