[package]
name = "audio-converter-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
audios_common = { path = "../crates/common" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
