[package]
name = "audio-fetcher-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
audios_common = { path = "../crates/common" }
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
scraper = "0.20"
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
