[package]
name = "metadata-matcher-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
audios_common = { path = "../crates/common" }
anyhow = "1"
chrono = { version = "0.4", features=["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
